kubernetes/220328 3tier ingress tls(google cert)/was-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-was
  template:
    metadata:
      labels:
        app: java-was
    spec:
      containers:
      - name: was
        image: gymin97/msa:java-was
