kubernetes/220328 3tier ingress tls(google cert)/db-ep.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-svc # 서비스명과 동일할 것
subsets:
  - addresses:
      - ip: 10.111.0.28 # 서버 ip
    ports:
      - port: 3306
