kubernetes/220328 3tier ingress tls(google cert)/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "k8s-ip" # gcp의 static ip
    networking.gke.io/managed-certificates: managed-cert # gcp certification
    networking.gke.io/v1beta1.FrontendConfig: "https-redirect"

spec:
  rules:
  - host: v1.mymincloud.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mynginx # 적용할 svc 이름
            port: 
              number: 80
